Shopping Swagger update and adding shopping DTOs
